--- a/index.html
+++ b/index.html
@@ -880,12 +880,83 @@
 
 
     <!--  ★´･ｪ･`★´･ｪ･`★´･ｪ･`★´･ｪ･ INICIO FOOTER ★´･ｪ･`★´･ｪ･`★´･ｪ･`★´･ｪ･`★´ -->
-    <footer class="footer-main in-line theme-sky-dark">
-        <div class="logo-container in-line">
-            <img src="images/iso_blanco.svg" 
-                 alt ="logotipo de Ada Shops"
-                 class="logo" />
-            <p>ADA SHOP - Gracias por visitarnos 💙</p>
+    <footer class="footer-main theme-sky-dark">
+        <div class="footer-content">
+            <!-- Sección Logo y Descripción -->
+            <div class="footer-section">
+                <div class="footer-logo-container in-line">
+                    <img src="images/iso_blanco.svg" 
+                         alt="logotipo de Ada Shops"
+                         class="footer-logo" />
+                    <h3>ADA SHOP</h3>
+                </div>
+                <p class="footer-description">
+                    Tu tienda de tecnología de confianza. Productos de calidad al mejor precio.
+                </p>
+            </div>
+
+            <!-- Sección Enlaces Útiles -->
+            <div class="footer-section">
+                <h3>Enlaces Útiles</h3>
+                <ul class="footer-links">
+                    <li><a href="#shop">Productos</a></li>
+                    <li><a href="#about">Sobre Nosotros</a></li>
+                    <li><a href="#policies">Políticas</a></li>
+                    <li><a href="#help">Ayuda</a></li>
+                </ul>
+            </div>
+
+            <!-- Sección de Contacto -->
+            <div class="footer-section">
+                <h3>Contáctanos</h3>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <i class="fab fa-github"></i>
+                        <a href="https://github.com/Juannnma" target="_blank" rel="noopener noreferrer">
+                            github.com/Juannnma
+                        </a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fab fa-linkedin"></i>
+                        <a href="https://linkedin.com/in/juan-martin-michaux-163464242" target="_blank" rel="noopener noreferrer">
+                            linkedin.com/in/juan-martin-michaux-163464242
+                        </a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fab fa-whatsapp"></i>
+                        <a href="https://wa.me/54902604585110" target="_blank" rel="noopener noreferrer">
+                            +54 9 0260 458-5110
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Sección Redes Sociales -->
+            <div class="footer-section">
+                <h3>Síguenos</h3>
+                <div class="social-links">
+                    <a href="https://github.com/Juannnma" target="_blank" rel="noopener noreferrer" 
+                       class="social-link" aria-label="GitHub">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://linkedin.com/in/juan-martin-michaux-163464242" target="_blank" rel="noopener noreferrer" 
+                       class="social-link" aria-label="LinkedIn">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://wa.me/54902604585110" target="_blank" rel="noopener noreferrer" 
+                       class="social-link" aria-label="WhatsApp">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Línea divisoria y copyright -->
+        <div class="footer-bottom">
+            <div class="footer-divider"></div>
+            <p class="footer-copyright">
+                © 2024 ADA SHOP - Gracias por visitarnos 💙 | Desarrollado con ❤️ por Juan Martín
+            </p>
         </div>
     </footer>
     <!--  ★´･ｪ･`★´･ｪ･`★´･ｪ･`★´･ｪ･ FIN FOOTER★´･ｪ･`★´･ｪ･`★´･ｪ･`★´･ｪ･`★´ -->
