--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
             <div class="footer-section">
                 <h3>Contáctanos</h3>
                 <div class="contact-info">
-                    <div class="contact-item">
+                    <!-- <div class="contact-item">
                         <i class="fab fa-github"></i>
                         <a href="https://github.com/Juannnma" target="_blank" rel="noopener noreferrer">
                             github.com/Juannnma
@@ -921,7 +921,7 @@
                         <a href="https://linkedin.com/in/juan-martin-michaux-163464242" target="_blank" rel="noopener noreferrer">
                             linkedin.com/in/juan-martin-michaux-163464242
                         </a>
-                    </div>
+                    </div> -->
                     <div class="contact-item">
                         <i class="fab fa-whatsapp"></i>
                         <a href="https://wa.me/54902604585110" target="_blank" rel="noopener noreferrer">
@@ -943,10 +943,7 @@
                        class="social-link" aria-label="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="https://wa.me/54902604585110" target="_blank" rel="noopener noreferrer" 
-                       class="social-link" aria-label="WhatsApp">
-                        <i class="fab fa-whatsapp"></i>
-                    </a>
+
                 </div>
             </div>
         </div>
@@ -955,7 +952,7 @@
         <div class="footer-bottom">
             <div class="footer-divider"></div>
             <p class="footer-copyright">
-                © 2024 ADA SHOP - Gracias por visitarnos 💙 | Desarrollado con ❤️ por Juan Martín
+                © 2025 ADA SHOP - Gracias por visitarnos 💙 | Desarrollado con ❤️ por Juan Martín
             </p>
         </div>
     </footer>
