Cambios en el nombre

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="in-line">
             <img class="branding-logo"
                  src="images/iso_blanco.svg"
-                 alt ="logotipo de Ada Shops"
+                 alt ="logotipo de Tecno Shop"
                  aria-hidden="true" />
             <p class="branding"
-               aria-label="Bienvenido a nuestra tienda on-line:">ADA SHOP</p>
+               aria-label="Bienvenido a nuestra tienda on-line:">TECNO SHOP</p>
         </div>
 
         <!-- finaliza marca del header-->
@@ -886,9 +886,9 @@
             <div class="footer-section">
                 <div class="footer-logo-container in-line">
                     <img src="images/iso_blanco.svg" 
-                         alt="logotipo de Ada Shops"
+                         alt="logotipo de Tecno Shop"
                          class="footer-logo" />
-                    <h3>ADA SHOP</h3>
+                    <h3>TECNO SHOP</h3>
                 </div>
                 <p class="footer-description">
                     Tu tienda de tecnología de confianza. Productos de calidad al mejor precio.
@@ -952,7 +952,7 @@
         <div class="footer-bottom">
             <div class="footer-divider"></div>
             <p class="footer-copyright">
-                © 2025 ADA SHOP - Gracias por visitarnos 💙 | Desarrollado con ❤️ por Juan Martín
+                © 2025 TECNO SHOP - Gracias por visitarnos 💙 | Desarrollado con ❤️ por Juan Martín
             </p>
         </div>
     </footer>
