Cambios el contacto

--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
                     </div> -->
                     <div class="contact-item">
                         <i class="fab fa-whatsapp"></i>
-                        <a href="https://wa.me/54902604585110" target="_blank" rel="noopener noreferrer">
+                        <a href="https://wa.me/5492604585110?text=Hola! Me interesa conocer más sobre los productos de TECNO SHOP. ¿Podrías ayudarme?" target="_blank" rel="noopener noreferrer">
                             +54 9 0260 458-5110
                         </a>
                     </div>
