Agrego bot de prueba

--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,13 @@
     <div class="overlay is-hidden" id="overlay"></div>
         <!--  ★´･ｪ･`★´･ｪ･`★´･ｪ･`★´･ｪ･`★´ FIN MODAL VACIAR CARRITO ★´･ｪ･`★´･ｪ･`★´･ｪ･`★´･ｪ･`★´ -->
         <script src="index.js"></script>
-
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="tecno_shop"
+  agent-id="e66f4625-7735-428c-861b-9ee6d5c5f601"
+  language-code="es"
+></df-messenger>
 </body>
 
 </html>
